--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=shortify
+
+# Database
+spring.datasource.url=jdbc:postgresql://localhost:5432/shortify
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
